kv_versioned_docs/version-2.0.0/index/index.md
---
title: "Riak KV"
sidebar_position: 100
sidebar_label: Riak KV
pagination_label: "Riak KV"
hide_table_of_contents: true
slug: /
hide_title: true
last_update:
  author: RiakDocs
  date: 2014-08-14
---
import RiakDocsNote from '@site/src/components/RiakDocs/RiakDocsNote';


[aboutenterprise]: http://basho.com/contact/
[config index]: ./configuring
[dev index]: ./developing
[downloads]: ./downloads
[install index]: ./setup/installing
[plan index]: ./setup/planning
[perf open files]: ./using/performance/open-files-limit
[install debian & ubuntu]: ./setup/installing/debian-ubuntu
[usage search]: ./developing/usage/search
[getting started]: ./developing/getting-started
[dev client libraries]: ./developing/client-libraries

Riak KV is a distributed NoSQL database designed to deliver maximum data availability by distributing data across multiple servers. As long as your Riak KV client can reach one Riak server, it should be able to write data.

[Riak KV Enterprise][aboutenterprise] includes multi-datacenter cluster replication, which ensures low-latency and robust business continuity.

## Getting Started

Are you brand new to Riak KV? Start by [downloading][downloads] Riak KV, and then follow the below pages to get started:

1. [Install Riak KV][install index]
2. [Plan your Riak KV setup][plan index]
3. [Configure Riak KV for your needs][config index]

>**Developing with Riak KV**
>
>If you are looking to integrate Riak KV with your existing tools, check out the [Developing with Riak KV][dev index] docs. They provide instructions and examples for languages such as: Java, Ruby, Python, Go, Haskell, NodeJS, Erlang, and more.

## Popular Docs

1. [Open Files Limit][perf open files]
2. [Installing on Debian-Ubuntu][install debian & ubuntu]
3. [Developing with Riak KV: Searching][usage search]
4. [Developing with Riak KV: Getting Started][getting started]
5. [Developing with Riak KV: Client Libraries][dev client libraries]
